--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         }
 
         .content {
-            padding: 0rem 10rem;
+            padding: 2rem 30vw;
         }
 
         .project-container {
@@ -57,6 +57,10 @@
             flex-flow: row wrap;
             align-items: center;
             gap: 1rem;
+        }
+
+        .a-propos {
+            font-size: 1.1rem;
         }
     </style>
 </head>
@@ -77,10 +81,13 @@
     </nav>
 
     <div class="content">
-        <h1></h1>
-        <section></section>
+        <section>
+            <p class="a-propos">
+               Bonjour ! Je suis un ingénieur du son passionné par la musique et le son. Mon rôle consiste à capturer, mixer et produire des enregistrements audio de haute qualité, que ce soit pour des albums, des films, des podcasts ou des événements en direct. J'utilise une variété d'équipements et de logiciels pour m'assurer que chaque projet sonore atteint son plein potentiel. J'aime collaborer avec des artistes et des créateurs pour donner vie à leur vision sonore.
+            </p>
+        </section>
 
-        <h2>Projets</h2>
+        <h1>Projets</h1>
         <div class="project-container">
             <iframe width="300" height="180" src="https://www.youtube.com/embed/smIJhHNgHh8?si=_GL80cOkUKlovhf0"
                 title="YouTube video player" frameborder="0"
@@ -89,7 +96,7 @@
         </div>
 
 
-        <h2>Contact</h2>
+        <h1>Contact</h1>
         <section class="contact-container">
             <a href="https://www.youtube.com/@InthePouchett">
                 <img height="50px" alt="Chaine Youtube"
