--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
         rel="stylesheet">
 
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css">
+
     <style>
         body {
             padding: 0;
@@ -75,6 +77,7 @@
 
         <div class="contact">
             <a class="reset-link-style" href="mailto:clementmaniette.sound@gmail.com">
+                <i class="fa-solid fa-envelope"></i>
                 Contact
             </a>
         </div>
@@ -96,22 +99,18 @@
         </div>
 
 
-        <h1>Contact</h1>
+        <h1>Réseaux Sociaux</h1>
         <section class="contact-container">
             <a href="https://www.youtube.com/@InthePouchett">
-                <img height="50px" alt="Chaine Youtube"
-                    src="https://upload.wikimedia.org/wikipedia/commons/e/ef/Youtube_logo.png" />
+                <i style="font-size: 4rem" class="fa-brands fa-youtube"></i>
             </a>
 
             <a href="https://www.instagram.com/clem_maniette/profilecard/?igsh=MWx1OGJlNnJyNGVpdA==">
-                <img
-                    height="50px"
-                    src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/95/Instagram_logo_2022.svg/1024px-Instagram_logo_2022.svg.png"
-                    alt="Compte instagram">
+                <i style="font-size: 4rem" class="fa-brands fa-instagram"></i>
                 </a>
 
             <a href="https://www.linkedin.com">
-                <img height="50px" src="https://content.linkedin.com/content/dam/me/business/en-us/amp/brand-site/v2/bg/LI-Bug.svg.original.svg"></img>
+                <i style="font-size: 4rem" class="fa-brands fa-linkedin"></i>
             </a>
         </section>
     </div>
