--- a/index.html
+++ b/index.html
@@ -46,12 +46,13 @@
         }
 
         .content {
-            padding: 2rem 30vw;
+            padding: 2rem 20vw;
         }
 
         .project-container {
             display: flex;
             flex-flow: row wrap;
+            gap: 1rem;
         }
 
         .contact-container {
