--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css">
 
     <style>
+        :root {
+            --navbar-color: rgb(0, 105, 128);
+        }
         body {
             padding: 0;
             font-family: "Open Sans", sans-serif;
@@ -23,7 +26,7 @@
         .navbar {
             padding: 0rem 1rem;
             display: flex;
-            background-color: rgb(0, 105, 128);
+            background-color: var(--navbar-color);
             height: 5rem;
             align-items: center;
             justify-content: space-between
@@ -65,6 +68,15 @@
         .a-propos {
             font-size: 1.1rem;
         }
+
+        .remove-clicked-color {
+            color: var(--navbar-color);
+            text-decoration: none;
+        }
+
+        .remove-clicked-color:visited {
+            color: none;
+        }
     </style>
 </head>
 
@@ -102,15 +114,15 @@
 
         <h1>Réseaux Sociaux</h1>
         <section class="contact-container">
-            <a href="https://www.youtube.com/@InthePouchett">
+            <a class="remove-clicked-color" href="https://www.youtube.com/@InthePouchett">
                 <i style="font-size: 4rem" class="fa-brands fa-youtube"></i>
             </a>
 
-            <a href="https://www.instagram.com/clem_maniette/profilecard/?igsh=MWx1OGJlNnJyNGVpdA==">
+            <a class="remove-clicked-color" href="https://www.instagram.com/clem_maniette/profilecard/?igsh=MWx1OGJlNnJyNGVpdA==">
                 <i style="font-size: 4rem" class="fa-brands fa-instagram"></i>
                 </a>
 
-            <a href="https://www.linkedin.com">
+            <a class="remove-clicked-color" href="https://www.linkedin.com">
                 <i style="font-size: 4rem" class="fa-brands fa-linkedin"></i>
             </a>
         </section>
