Open links in new tab

--- a/index.html
+++ b/index.html
@@ -114,15 +114,15 @@
 
         <h1>Réseaux Sociaux</h1>
         <section class="contact-container">
-            <a class="remove-clicked-color" href="https://www.youtube.com/@InthePouchett">
+            <a class="remove-clicked-color" href="https://www.youtube.com/@InthePouchett" target="_blank">
                 <i style="font-size: 4rem" class="fa-brands fa-youtube"></i>
             </a>
 
-            <a class="remove-clicked-color" href="https://www.instagram.com/clem_maniette/profilecard/?igsh=MWx1OGJlNnJyNGVpdA==">
+            <a class="remove-clicked-color" href="https://www.instagram.com/clem_maniette/profilecard/?igsh=MWx1OGJlNnJyNGVpdA==" target="_blank">
                 <i style="font-size: 4rem" class="fa-brands fa-instagram"></i>
                 </a>
 
-            <a class="remove-clicked-color" href="https://www.linkedin.com">
+            <a class="remove-clicked-color" href="https://www.linkedin.com" target="_blank">
                 <i style="font-size: 4rem" class="fa-brands fa-linkedin"></i>
             </a>
         </section>
