add cover image

--- a/index.html
+++ b/index.html
@@ -73,6 +73,19 @@
             color: var(--navbar-color);
             text-decoration: none;
         }
+
+        .cover-image {
+            height: 50dvh;
+            background: linear-gradient(180deg, rgba(0,0,0,0) 50%, rgba(0,0,0,1) 100%), url('https://github.com/user-attachments/assets/c0b50778-0c06-44c8-826d-0544ed8da135') center/cover;
+            color: white;
+            text-align: center;
+            display: flex;
+            flex-direction: column;
+            justify-content: flex-end;
+            font-size: 2rem;
+            font-weight: 700;
+            padding: 1rem;
+        }
     </style>
 </head>
 
@@ -91,6 +104,11 @@
             </a>
         </div>
     </nav>
+
+    <div class="cover-image">
+        Bonjour
+        </div>
+
 
     <div class="content">
         <section>
@@ -114,11 +132,11 @@
                 <i style="font-size: 4rem" class="fa-brands fa-youtube"></i>
             </a>
 
-            <a class="remove-clicked-color" href="https://www.instagram.com/clem_maniette/profilecard/?igsh=MWx1OGJlNnJyNGVpdA==" target="_blank">
+            <a class="remove-clicked-color" href="https://www.instagram.com/clem_maniette/" target="_blank">
                 <i style="font-size: 4rem" class="fa-brands fa-instagram"></i>
                 </a>
 
-            <a class="remove-clicked-color" href="https://www.linkedin.com" target="_blank">
+            <a class="remove-clicked-color" href="https://www.linkedin.com/in/clément-maniette/" target="_blank">
                 <i style="font-size: 4rem" class="fa-brands fa-linkedin"></i>
             </a>
         </section>
